syntax = "proto3";

package item;

service ItemService {
    rpc GetItem (ItemRequest) returns (ItemResponse) {}
}

message ItemRequest {
    int32 id = 1;
}

message ItemResponse {
    int32 id = 1;
    int32 itemNo = 2;
    string name = 3;
    int64 quantity = 4;
    string unit = 5;
    int64 price = 6;
    string remark = 7;
}